fix(#9): Images could overflow the div

--- a/frontend/src/app/layout/image/image.component.scss
+++ b/frontend/src/app/layout/image/image.component.scss
@@ -1,6 +1,7 @@
 .image-container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   display: flex;
   justify-content: center;
